[project]
name = "randomplots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy==2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "toml>=0.10.2",
]
